# cpp_samples

Patterns/Observer/: DisplayElement.hpp  Observer.hpp  Subject.hpp  WeatherData.hpp
Patterns/delegate_behavior/: Duck.cpp  Duck.hpp  FlyBehavior.cpp  FlyBehavior.hpp  Makefile  MallardDuck.cpp  MallardDuck.hpp  QuackBehavior.cpp  QuackBehavior.hpp  main  main.cpp
Patterns/polimorph_animal/: main  main.cpp
c++17_top/: cpp17_top.cpp
cmake/: CMakeLists.txt  test.cpp
cmake/Help/guide/tutorial/Step1/: CMakeLists.txt  tutorial.cxx
cmake/Help/guide/tutorial/Step1/buildir/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
cmake/Help/guide/tutorial/Step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake/Help/guide/tutorial/Step3/: CMakeLists.txt  CMakeLists.txt2  tutorial.cxx
cmake/Help/guide/tutorial/Step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake/Help/guide/tutorial/Step6/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake/cpack/: CMakeLists.txt
cmake/cpack/cpack/: CMakeLists.txt  main.cpp
codewars/string_ends_with/: str_ends_with.cpp
cpp_concurrency/: c1_hello_world.cpp  c2.cpp
cpp_flaws/: \  cpp_flaws.cpp
dbus/: CMakeLists.txt  dbus_sample  dbus_sample.cpp
dbus_meson/: dbus_sample.cpp  meson.build
fstream/: CMakeLists.txt  fstream.cpp  origin  test
getsockopt/: Makefile  getsockopt.c
grokking_algo/4.1_sum/: sum.cpp
grokking_algo/4.2-3_count_list_elem/: count_list_elem.cpp
grokking_algo/binary_search/: binary_search.cpp  binary_search_mod.cpp
grokking_algo/breadth_first_search/: breadth_first_search.cpp
grokking_algo/dijkstras_algorithm/: dijkstras_algorithm.cpp
grokking_algo/quick_sort/: quick_sort.cpp
grokking_algo/radio_station_set/: radio_station_set.cpp
grokking_algo/selection_sort/: selection_sort.cpp
gtests/: CMakeLists.txt  main.cpp.removed  sample.cpp  tests.cpp
jsoncpp/: create_json.cpp  jsoncpp_cin_cout_ex.cpp  jsoncpp_ex.cpp  jsoncpp_file.cpp  jsoncpp_reader_ex.cpp  jsoncpp_styledWriter.cpp  nftables.json
mapping_file/: mapping_file.cpp  test
open_ofstream/: ofstream.cpp  test
perfect_forwarding/: perfect_forwarding.cpp
pointer_to_func/: main.cpp
r_value/: r_value.cpp  template_deduction_r_l_value.cpp
random/: random.cpp
replace_str_in_file/: CMakeLists.txt  replace_str_in_file.cpp
scons/: .sconsign.dblite  SConstruct  class_a.cpp  class_a.h  class_b.cpp  class_b.h  main.cpp  second.cpp  tags
string_from_file/: ntp.conf.in  replace_str_in_file.cpp
tcp_server/: Makefile  Server.cpp  Server.h  protocol.hh  test.cpp  testdata.xml
time/: time.cpp
write/: write.cpp
(+39 files in other folders)
